fix ActionBar tittle. Create NewCategoryActivity, CategoryAdapter, categories_list.xml and new_category.xml. Add new method getCategories to CategoryTaskDataSource.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,10 +5,10 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label=""
+        android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.activity.SplashScreenActivity">
+        <activity android:name=".ui.activity.SplashScreenActivity" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -16,7 +16,9 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ui.activity.MainActivity"></activity>
+        <activity android:name=".ui.activity.MainActivity" android:label="" android:screenOrientation="portrait"></activity>
+
+        <activity android:name=".ui.activity.NewCategoryActivity" android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
