create TasksActivity, NewTaskActivity, new_task_xml, task_list.xml and tasks_menu.xml

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,10 @@
         <activity android:name=".ui.activity.MainActivity" android:label="" android:screenOrientation="portrait"></activity>
 
         <activity android:name=".ui.activity.NewCategoryActivity" android:screenOrientation="portrait"></activity>
+
+        <activity android:name=".ui.activity.TasksActivity" android:screenOrientation="portrait"></activity>
+
+        <activity android:name=".ui.activity.NewTaskActivity" android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
