--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
         <activity android:name=".ui.activity.TasksActivity" android:label="" android:screenOrientation="portrait"></activity>
 
         <activity android:name=".ui.activity.NewTaskActivity" android:screenOrientation="portrait"></activity>
+
+        <activity android:name=".ui.activity.TasksNotificationActivity" android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
