create AlarmReceiver, NotificationActivity and notification.xml. Add Cloneable to Task.java. Add getTask to CategoryTaskDataSource

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,13 @@
         <activity android:name=".ui.activity.NewTaskActivity" android:screenOrientation="portrait"></activity>
 
         <activity android:name=".ui.activity.TasksNotificationActivity" android:screenOrientation="portrait"></activity>
+
+        <receiver android:name=".notification.AlarmReceiver">
+            <intent-filter>
+                <action android:name="android.media.action.DISPLAY_NOTIFICATION" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
