--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,11 +39,15 @@
             </intent-filter>
         </receiver>
 
-        <receiver android:name=".util.BootBroadcastReceiver">
+        <receiver android:name=".utils.BootBroadcastReceiver" android:enabled="true" android:exported="false">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.QUICKBOOT_POWERON" />
             </intent-filter>
         </receiver>
+
+        <service android:name=".services.SetAlarmManagerService" android:enabled="true"/>
+
     </application>
 
 </manifest>
