add RemoveCategoryActivity, RemoveCategoryAdapter, custom_remove_category_item.xml and remove_category.xml

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
 
         <activity android:name=".ui.activity.NewTaskActivity" android:screenOrientation="portrait"></activity>
 
-        <activity android:name=".ui.activity.TasksNotificationActivity" android:screenOrientation="portrait"></activity>
+        <activity android:name=".ui.activity.NewNotificationActivity" android:screenOrientation="portrait"></activity>
 
         <activity android:name=".ui.activity.NotificationActivity" android:screenOrientation="portrait"></activity>
 
