--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,8 @@
 
         <activity android:name=".ui.activity.NotificationActivity" android:screenOrientation="portrait"></activity>
 
+        <activity android:name=".ui.activity.RemoveCategoryActivity" android:screenOrientation="portrait"></activity>
+
         <receiver android:name=".notification.AlarmReceiver">
             <intent-filter>
                 <action android:name="android.media.action.DISPLAY_NOTIFICATION" />
